# birdclef-2023

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: inference.py  pretrain.py  shell.sh  train.py
src/check/: memo.ipynb
src/classifier/bird2023classifier/: __init__.py  bird2023classifier.py  bird2023model.py  bird2023sedmodel.py  dataset.py
src/configs/: debug.yaml  debug_sed.yaml  exp1.yaml  exp10.yaml  exp100.yaml  exp101.yaml  exp102.yaml  exp103.yaml  exp104.yaml  exp105.yaml  exp106.yaml  exp107.yaml  exp108.yaml  exp11.yaml  exp12.yaml  exp13.yaml  exp14.yaml  exp15.yaml  exp16.yaml  exp17.yaml  exp18.yaml  exp19.yaml  exp2.yaml  exp20.yaml  exp21.yaml  exp22.yaml  exp23.yaml  exp24.yaml  exp25.yaml  exp26.yaml  exp27.yaml  exp28.yaml  exp29.yaml  exp3.yaml  exp30.yaml  exp31.yaml  exp32.yaml  exp33.yaml  exp34.yaml  exp35.yaml  (+91 more)
