[tool.poetry]
name = "birdclef-2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.2"
pandas = "^1.5.3"
ipykernel = "^6.22.0"
jupyter = "^1.0.0"
notebook = "^6.5.3"
pytorch-lightning = "1.9.3"
torch = "^2.0.0"
wandb = "^0.14.0"
timm = "^0.6.13"
torchaudio = "^2.0.1"
llvmlite = "^0.39.1"
audiomentations = "^0.29.0"
numba = "^0.56.4"
imbalanced-learn = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
